Fix member-footer expand/collapse

--- a/packages/custom/icu/public/assets/css/_variables.scss
+++ b/packages/custom/icu/public/assets/css/_variables.scss
@@ -1,5 +1,4 @@
 $header-height: 55px;
-$footer-height: 55px;
 
 $multiple-select-bar-height: 44px;
 
